--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,9 @@
         just ported to the Android platform.
         \n\n
         Connect your Switch and put it in RCM mode to start pwning.
+        \n\n
+        https://github.com/DavidBuchanan314/NXLoader
+        \n\n
+        Twitter: @David3141593
     </string>
 </resources>
