--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,14 +3,14 @@
     <string name="preference_payload_name">io.github.davidbuchanan314.PREFERENCE_PAYLOAD_NAME</string>
     <string name="sel_primary_payload">Select Primary Payload</string>
     <string name="reset_primary">Restore Default Primary Payload (fusee.bin)</string>
-    <string name="about">\nNXLoader is an exploit implementation for \"the\" Tegra X1
+    <string name="about"><![CDATA[<br>NXLoader is an exploit implementation for "the" Tegra X1
         bootrom vulnerability. It is based on the fusée gelée exploit by ktemkin, and the ShofEL2 exploit by fail0verflow,
         just ported to the Android platform.
-        \n\n
+        <br><br>
         Connect your Switch and put it in RCM mode to start pwning.
-        \n\n
-        https://github.com/DavidBuchanan314/NXLoader
-        \n\n
-        Twitter: @David3141593
+        <br><br>
+        <a href="https://github.com/DavidBuchanan314/NXLoader">https://github.com/DavidBuchanan314/NXLoader</a>
+        <br><br>
+        Twitter: <a href="https://twitter.com/david3141593">@David3141593</a>]]>
     </string>
 </resources>
