Added a little bit of magic (∩ ͡° ͜ʖ ͡°)⊃━☆ﾟ

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
         <br><br>
         Twitter: <a href="https://twitter.com/david3141593">@David3141593</a>]]>
     </string>
+    <string name="lenny" translatable="false">( ͡° ͜ʖ ͡°)</string>
+    <string name="rosalina" translatable="false">(∩ ͡° ͜ʖ ͡°)⊃━☆ﾟ</string>
 </resources>
